--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    
 }
 
 @keyframes fadeOut {
@@ -72,7 +73,7 @@ body {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     text-align: center;
-    padding-bottom: 120px; /* Add some space so the content doesn't get hidden under the footer */
+    margin-top: 20px;
 }
 
 button {
@@ -276,24 +277,8 @@ button.on {
     display: none;
 }
 
-/* 🔹 Footer Styling */
-.footer {
-    width: 100%;
-    background: #f39200;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: -60px;
-    left: 0;
-    transition: bottom 0.3s ease-in-out; /* Smooth slide-in effect */
-    display: flex;
-    justify-content: center; /* Centers content horizontally */
-    align-items: center; /* Centers content vertically */
-}
-
-.show-footer {
-    bottom: 0; /* Moves footer into view */
+#Footer {
+    display: none;
 }
 
 #historyLogBtn {
